languages/montiarc-fe/src/test/resources/contextconditions/valid/SimpleConnectorSourceExistsExternal.arc
package valid;

component SimpleConnectorSourceExistsExternal {
  component B {
    port in String bIn;
  }
  
  component StringSender a [sOut -> b.bIn];
}